# skillforge

./: .gitignore  CAMERA_FIX_LOG.md  MERGE_GUIDE.md  README.md  SUBMISSION_LOG.md  ngrok.yml
.cursor/plans/: trainee_real-time_overlays_and_vertical_timeline_cdd074bd.plan.md  trainee_side_implementation_377a7118.plan.md
deploy/: README.md  sam3_server.py
docs/: api-server-setup.md  ar-websocket-server.md  dev-https-phone-camera.md  environment-variables.md  frontend-setup.md  gpu-services-setup.md  phone-camera-ngrok.md  sam3-gpu-deployment.md
skillforge/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.mjs
skillforge-api/: .env.example  .gitignore  MULTI_AGENT_SYSTEM.md  README.md  SPEECH_FIX_LOG.md  main.py  pyproject.toml  requirements.txt  skillforge.db  start.sh
skillforge-api/app_ws/: pipeline_ws.py
skillforge-api/models/: database.py  schemas.py
skillforge-api/routers/: asr.py  copilot.py  editor.py  guided_recording.py  live_detect.py  pipeline.py  recording.py  subtitles.py  trainee.py  voice.py  workflows.py
skillforge-api/services/: apparatus_pipeline.py  asr_service.py  claude_copilot.py  claude_orchestrator.py  dinov2_service.py  grounding_dino_service.py  hardware_pipeline.py  key_object_pipeline.py  mediapipe_tracker.py  memory_layer.py  nemotron_client.py  sam2_service.py  sam3_client.py  sam3_service.py  storage_service.py  subtitle_service.py  video_processor.py  workflow_builder.py  yolo_detector.py
skillforge-api/utils/: event_mapper.py  frame_utils.py
skillforge/app/: page.tsx  (+2 more)
(+116 files in other folders)
