[project]
name = "skillforge-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "av>=12.0",
    "aiohttp==3.11.11",
    "aiosqlite==0.21.0",
    "anthropic==0.49.0",
    "asyncpg>=0.29",
    "boto3>=1.34",
    "fastapi==0.115.8",
    "httpx==0.28.1",
    "mediapipe==0.10.21",
    "numpy>=1.24,<2",
    "opencv-python-headless==4.11.0.86",
    "pillow==11.1.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "ultralytics==8.3.73",
    "uvicorn==0.34.0",
    "websockets>=13,<14",
    "wsproto>=1.3",
]
